fixed button sticking to the img on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -209,6 +209,8 @@ display: block;
 
 /* Presentation Styling ───────────────────────────────────────── */
 
+#bouton-histoire
+{ margin-bottom: 15px;}
 
 /* Presentation Styling End ------------------------------- */
 
